@@ -3,10 +3,12 @@ post_install() {
 gtk-update-icon-cache -f -q /usr/share/icons/hicolor
 update-desktop-database -q
 
-echo " see http://wiki.archlinux.org/index.php/Openoffice"
-echo " how to use extensions, e.g. for spell checking"
-echo " see /opt/openoffice-dev/share/extension/install what"
-echo " is shipped with this package"
+echo " * relogin or source /etc/profile.d/openoffice-devel.sh"
+echo " * see http://wiki.archlinux.org/index.php/Openoffice"
+echo "   how to use extensions, e.g. for spell checking"
+echo "   see /usr/lib/openoffice-dev/share/extension/install what"
+echo "   is shipped with this package"
+echo " * make sure you have installed a ttf font (ttf-dejavu recommended)"
 }
 
 post_upgrade() {
@@ -19,5 +21,5 @@ gtk-update-icon-cache -f -q /usr/share/icons/hicolor
 
 # make sure everything is gone, maybe someone has installed
 # extensions for all users using unopkg --shared
-rm -rf /opt/openoffice-dev
+rm -rf /usr/lib/openoffice-dev
 }
