@@ -1,3 +1,13 @@
+2009-08-05 Andreas Radke <andyrtr at archlinux.org>
+
+        * 3.2_dev300_m54-1:
+	- new snapshot
+	- backup sofficerc file to fix
+	  http://bugs.archlinux.org/task/15161
+	- move all files to /usr/lib
+	- add startcenter menu entry, drop templates entry
+	- minor changes to the install file
+	
 2009-07-11 Andreas Radke <andyrtr at archlinux.org>
 
         * 3.2_dev300_m52-1:
